<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>edu.cmu.ml.rtw</groupId>
  <artifactId>micro-util</artifactId>
  <version>0.0.2-SNAPSHOT</version>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <nd4j.version>0.4-rc3.8</nd4j.version> <!-- word2vec -->
    <dl4j.version>0.4-rc3.8</dl4j.version> <!-- word2vec -->
  </properties>
  <build>
    <resources>
      <resource>
        <directory>src/main/java</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
  	<dependency>
	  <groupId>junit</groupId>
	  <artifactId>junit</artifactId>
	  <version>4.12</version>
  	</dependency>
   	<dependency>
  		<groupId>org.platanios</groupId>
  		<artifactId>learn</artifactId>
  		<version>0.0.1</version>
  	</dependency>
  	<dependency>
  		<groupId>com.google.guava</groupId>
  		<artifactId>guava</artifactId>
  		<version>18.0</version>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.hadoop</groupId>
  		<artifactId>hadoop-common</artifactId>
  		<version>2.2.0</version>
<exclusions>
  <exclusion> 
    <groupId>org.slf4j</groupId>
    <artifactId>slf4j-log4j12</artifactId>
  </exclusion>
  <exclusion> 
    <groupId>log4j</groupId>
    <artifactId>log4j</artifactId>
  </exclusion>
</exclusions> 
  	</dependency>
  	<dependency>
  		<groupId>edu.princeton.cup</groupId>
  		<artifactId>java-cup</artifactId>
  		<version>11b</version>
  	</dependency>
  	<dependency>
  		<groupId>edu.princeton.cup</groupId>
  		<artifactId>java-cup</artifactId>
  		<version>11b</version>
  		<classifier>runtime</classifier>
  	</dependency>
  	<dependency>
  		<groupId>joda-time</groupId>
  		<artifactId>joda-time</artifactId>
  		<version>2.4</version>
  	</dependency>
  	<dependency>
  		<groupId>de.jollyday</groupId>
  		<artifactId>jollyday</artifactId>
  		<version>0.4.7</version>
  	</dependency>
  	<dependency>
  		<groupId>net.sf.jopt-simple</groupId>
  		<artifactId>jopt-simple</artifactId>
  		<version>4.9-beta-1</version>
  	</dependency>
  	<dependency>
  		<groupId>org.json</groupId>
  		<artifactId>json</artifactId>
  		<version>20120521</version>
  	</dependency>
  	<dependency>
  		<groupId>patricia-trie</groupId>
  		<artifactId>patricia-trie</artifactId>
  		<version>0.6</version>
  	</dependency>
  	<dependency>
  		<groupId>edu.stanford.nlp</groupId>
  		<artifactId>stanford-corenlp</artifactId>
  		<version>3.5.2</version>
  	</dependency>
  	<dependency>
  		<groupId>edu.stanford.nlp</groupId>
  		<artifactId>stanford-corenlp</artifactId>
  		<version>3.5.2</version>
  		<classifier>models</classifier>
  	</dependency>
  	<dependency>
  		<groupId>edu.stanford.nlp</groupId>
  		<artifactId>stanford-corenlp</artifactId>
  		<version>3.5.2</version>
  		<classifier>sources</classifier>
  	</dependency>
	<dependency>
  		<groupId>org.apache.logging.log4j</groupId>
  		<artifactId>log4j-core</artifactId>
  		<version>2.2</version>
  	</dependency>
  	<dependency>
		<groupId>org.mongodb</groupId>
		<artifactId>mongo-java-driver</artifactId>
		<version>3.2.1</version>
	</dependency>
	<dependency>
		<groupId>nz.ac.waikato.cms.weka</groupId>
		<artifactId>weka-dev</artifactId>
		<version>3.7.13</version>
	</dependency> 
	<dependency>
		<groupId>nz.ac.waikato.cms.weka</groupId>
		<artifactId>oneClassClassifier</artifactId>
		<version>1.0.4</version>
	</dependency>
	<dependency>
		<groupId>nz.ac.waikato.cms.weka</groupId>
		<artifactId>LibSVM</artifactId>
		<version>1.0.4</version>
	</dependency>
	<!--  word2vec -->
	<dependency>
		<groupId>org.deeplearning4j</groupId>
		<artifactId>deeplearning4j-ui</artifactId>
		<version>${dl4j.version}</version>
	</dependency>
	<dependency>
		<groupId>org.deeplearning4j</groupId>
		<artifactId>deeplearning4j-nlp</artifactId>
		<version>${dl4j.version}</version>
	</dependency>
	<!-- <dependency>
		<groupId>org.jblas</groupId>
		<artifactId>jblas</artifactId>
		<version>1.2.3</version>
	</dependency> -->
	
	<!--  -<dependency>
		<groupId>org.nd4j</groupId>
		<artifactId>nd4j-x86</artifactId> 
		<version>${nd4j.version}</version>
	</dependency>-->
	<!--  SRL -->
	<dependency>
		<groupId>com.googlecode.mate-tools</groupId>
		<artifactId>srl</artifactId>
		<version>4.31</version>
	</dependency>
	<!-- WordNet -->
	<dependency>
		<groupId>net.sf.jwordnet</groupId>
		<artifactId>jwnl</artifactId>
		<version>1.4_rc3</version>
	</dependency>
	<!--  YADLL Deps -->
	<dependency>
         <groupId>yadll</groupId>
         <artifactId>yadll</artifactId>
         <version>1v4_skinny</version>
    </dependency>
    <dependency>
         <groupId>scala-parser-combinators_2.11</groupId>
         <artifactId>scala-parser-combinators_2.11</artifactId>
         <version>1.0.2</version>
	</dependency>
	<dependency>
         <groupId>scalacheck_2.11</groupId>
         <artifactId>scalacheck_2.11</artifactId>
         <version>1.11.6</version>
    </dependency>
    <dependency>
         <groupId>scalatest_2.11</groupId>
         <artifactId>scalatest_2.11</artifactId>
         <version>2.2.1</version>
    </dependency>
    <dependency>
         <groupId>org.joda</groupId>
         <artifactId>joda-convert</artifactId>
         <version>1.6</version>
    </dependency>
    <dependency>
         <groupId>jline</groupId>
         <artifactId>jline</artifactId>
         <version>2.11</version>
    </dependency>
    <dependency>
         <groupId>jcuda</groupId>
         <artifactId>jcuda</artifactId>
         <version>0.7.0a</version>
    </dependency>
    <dependency>
         <groupId>org.scala-lang</groupId>
         <artifactId>scala-library</artifactId>
         <version>2.11.7</version>
    </dependency>
    <dependency>
    	<groupId>org.apache.commons</groupId>
    	<artifactId>commons-math3</artifactId>
    	<version>3.2</version>
	</dependency>
    <dependency>
         <groupId>BIDMat</groupId>
         <artifactId>BIDMat</artifactId>
         <version>BIDMat</version>
    </dependency>
   <!--  <dependency>
        <groupId>edu.berkeley.compbio</groupId>
        <artifactId>jlibsvm</artifactId>
        <version>0.911</version>
    </dependency>-->
    <dependency>
		<groupId>tw.edu.ntu.csie</groupId>
		<artifactId>libsvm</artifactId>
		<version>3.17</version>
	</dependency>
    
  </dependencies>
  <repositories>      
  	<repository>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>rtw-libs</id>
      <name>rtw-libs-releases</name>
      <url>http://rtw.ml.cmu.edu:8081/artifactory/libs-release-local</url>
    </repository>
    <repository>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>rtw-ext</id>
      <name>rtw-ext-releases</name>
      <url>http://rtw.ml.cmu.edu:8081/artifactory/ext-release-local</url>
    </repository>
    <repository>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <id>rtw-libs-snapshot</id>
      <name>rtw-libs-snapshot</name>
      <url>http://rtw.ml.cmu.edu:8081/artifactory/libs-snapshot-local</url>
    </repository>
    <repository>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <id>rtw-ext-snapshot</id>
      <name>rtw-ext-snapshot</name>
      <url>http://rtw.ml.cmu.edu:8081/artifactory/ext-snapshot-local</url>
    </repository>
    <!--  <repository>
        <id>dev.davidsoergel.com releases</id>
        <url>http://dev.davidsoergel.com/nexus/content/repositories/releases</url>
        <snapshots>
            <enabled>false</enabled>
        </snapshots>
    </repository>
    <repository>
        <id>dev.davidsoergel.com snapshots</id>
        <url>http://dev.davidsoergel.com/nexus/content/repositories/snapshots</url>
        <releases>
            <enabled>false</enabled>
        </releases>
    </repository>-->
  </repositories>
  <distributionManagement>
  	<repository>
      <id>rtw-libs-snapshot</id>
      <name>rtw-libs-snapshot</name>
      <url>http://rtw.ml.cmu.edu:8081/artifactory/libs-snapshot-local</url>
    </repository>
  </distributionManagement>
</project>
